# catalyst-apim-service

./: pyproject.toml  run.sh
.devcontainer/: devcontainer.json
app/: main.py  settings.py
app/api/: routers.py
app/api/endpoint/: health_check.py
app/api/schema/: health_check.py
app/core/: settings.py
app/schemas/: health_check.py
docker/: Dockerfile.dev  compose.dev.yml
scripts/: run.sh  test.sh
src/core/: config.py
