[project]
name = "catalyst-apim-service"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic-settings>=2.5.2",
    "toml>=0.10.2",
    "sqlmodel>=0.0.22",
]

[tool.uv]
package = false
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311" # sync with python version
line-length = 128

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "W", # pycodestyle Warning
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.ruff.pydocstyle]
convention = "google"
